Fix h1 wrapping

--- a/hwk04/styles/contact.css
+++ b/hwk04/styles/contact.css
@@ -23,6 +23,7 @@ h1#contact-page-title {
   margin-bottom: var(--rhythm);
   margin-top: 0;
   line-height: var(--line-height-tight);
+  word-break: break-all;
 }
 
 h1#contact-page-title:after {
